# medical_record

./: .env_example  .gitignore  README.md  database.py  demobase.sql  docker-compose-local.yaml  main.py  main.spec  medical_record.db  pip_requirements.txt  pyinstaller.spec  pyproject.toml  settings.py  tables.py
_docx/: ~$Тб19з-1_Мансуров_АН_ПРП.docx  ИВТб19з-1_Мансуров_АН_ВКР.docx  ИВТб19з-1_Мансуров_АН_ПРП.docx
api/: __init__.py  allergy.py  auth.py  child.py  clinic.py  deworming.py  dispensary.py  epid_vaccination.py  export_data.py  extra_class.py  gg_injection.py  hospitalization.py  import_data.py  main.py  mantoux_test.py  medical_certificate.py  medical_examination.py  medical_record.py  ongoing_medical_supervision.py  oral_sanation.py  parent.py  past_illness.py  prevaccination_checkup.py  prof_vaccination.py  screening.py  spa_treatment.py  template_path.py  tub_vac.py  user.py  vaccination.py  visit_specialist_control.py
app/: __init__.py  auth.py  clinic.py  main.py  report.py  user.py  vaccine.py
models/: allergy.py  allergyes.py  auth.py  base_table_name.py  child.py  deworming.py  dispensary.py  exceptions.py  extra_class.py  extra_classes.py  gg_injection.py  hospitalization.py  json.py  kindergarten.py  mantoux_test.py  medical_certificate.py  medical_examination.py  ongoing_medical_supervision.py  oral_sanation.py  parent.py  past_illness.py  prevaccination_checkup.py  screening.py  spa_treatment.py  tables.py  tub_diagnostic.py  tub_vac.py  user.py  vac_name.py  vaccination.py  visit_specialist_control.py
services/: auth.py  clinic.py  user.py  (+20 more)
(+223 files in other folders)
