[tool.poetry]
name = "medical-record"
version = "0.1.0"
description = ""
authors = ["Alisher Mansurov <lmn.94@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
anyio = "^3.6.2"
bcrypt = "^4.0.1"
cffi = "^1.15.1"
click = "^8.1.3"
cryptography = "^40.0.1"
ecdsa = "^0.18.0"
envparse = "^0.2.0"
fastapi = "^0.95.0"
h11 = "^0.14.0"
idna = "^3.4"
jinja2 = "^3.1.2"
markupsafe = "^2.1.2"
passlib = "^1.7.4"
psycopg2-binary = "^2.9.5"
pyasn1 = "^0.4.8"
pycparser = "^2.21"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
rsa = "^4.9"
six = "^1.16.0"
sniffio = "^1.3.0"
starlette = "^0.26.1"
typing-extensions = "^4.5.0"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
